welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:9: error: ';' expected but 'true' found.
  retrun true } 
         ^